maj debug et ajout du début de l'interface graphique