@@ -1,8 +1,12 @@
 # projet java
 
+### Installer javaFX
+* [javaFx](https://openjfx.io/)
+
+### Commandes
 __commande java :__
-* javac \*.java
-* java Main
+* javac --module-path $PATH_TO_FX --add-modules javafx.controls \*.java
+* java --module-path $PATH_TO_FX --add-modules javafx.controls Main
 
 __commande git :__
 * git add \*.java diagrammes _(\*.java pour éviter d'ajouter les .class)_
